welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:1: error: not found: value aireV
override def run() {aireV();faireV();faireV();faireV()}
                    ^