welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {aireV();faireV();faireV();faireV()}

def marquerSol() {baisseBrosse();leveBrosse()}

def faireV()  {avance();avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();avance();gauche()}
